tests/ui/impl-unused-tps.stderr
error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:45:8
   |
LL | impl<T,U,V> Foo<T> for T
   |        ^ unconstrained type parameter

error[E0207]: the type parameter `V` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:45:10
   |
LL | impl<T,U,V> Foo<T> for T
   |          ^ unconstrained type parameter

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:29:8
   |
LL | impl<T,U> Bar for T {
   |        ^ unconstrained type parameter

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:37:8
   |
LL | impl<T,U> Bar for T
   |        ^ unconstrained type parameter

error[E0119]: conflicting implementations of trait `Foo<_>` for type `[isize; 0]`
  --> $DIR/impl-unused-tps.rs:25:1
   |
LL | impl<T> Foo<T> for [isize;0] {
   | ---------------------------- first implementation here
...
LL | impl<T,U> Foo<T> for U {
   | ^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `[isize; 0]`

error[E0119]: conflicting implementations of trait `Foo<[isize; 0]>` for type `[isize; 0]`
  --> $DIR/impl-unused-tps.rs:45:1
   |
LL |   impl<T> Foo<T> for [isize;0] {
   |   ---------------------------- first implementation here
...
LL | / impl<T,U,V> Foo<T> for T
LL | |     where (T,U): Bar<Out=V>
   | |___________________________^ conflicting implementation for `[isize; 0]`

error[E0119]: conflicting implementations of trait `Foo<([isize; 0], _)>` for type `[isize; 0]`
  --> $DIR/impl-unused-tps.rs:56:1
   |
LL |   impl<T> Foo<T> for [isize;0] {
   |   ---------------------------- first implementation here
...
LL | / impl<T,U,V> Foo<(T,U)> for T
LL | |     where (T,U): Bar<Out=V>
   | |___________________________^ conflicting implementation for `[isize; 0]`

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:13:8
   |
LL | impl<T,U> Foo<T> for [isize;1] {
   |        ^ unconstrained type parameter

error[E0119]: conflicting implementations of trait `Bar`
  --> $DIR/impl-unused-tps.rs:37:1
   |
LL |   impl<T,U> Bar for T {
   |   ------------------- first implementation here
...
LL | / impl<T,U> Bar for T
LL | |     where T : Bar<Out=U>
   | |________________________^ conflicting implementation

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0119, E0207.
For more information about an error, try `rustc --explain E0119`.
